# random_things

./: .gitmodules  LICENSE.md  README.md  color, bit, add.py  drow.py  handleVideo.py  size,scale,slice.py
dart/flutter/: README.md
dev process/: unit_testing.md
etc/: markdown.md  unit_testing.md
framework/flutter/: README.md  widget.md
framework/jest/: README.md
language/: markdown.md
language/c++/: class.md
language/c,c++/: class.md  etc.md  filename_extensions.md  solve.c
language/c,c++/compile/: gcc.md  makefile.md
language/c,c++/gtest/: etc.md
language/c/c++/compile/: makefile.md
language/dart/: README.md  syntax.md
language/kotlin/: README.md  syntax.md
libs/naver api/: package.json
libs/naver api/server/: index.js
libs/naver api/src/: index.html  index.js
libs/openCV/feature/: corner detection.ipynb
libs/openCV/processing/: blur.py  color, bit, add.py  edgeDetection.py
libs/openCV/stereo vision/: epipolar geometry.ipynb
libs/openCV/video/: handleVideo.py
libs/pytorch/: autograd.ipynb  tensor.ipynb
libs/pytorch/tutorials/: cifar_net.pth  neural_net.ipynb  nn_with_mnist.ipynb
libs/pytorch/tutorials/runs/fashion_mnist_experiment_1/: events.out.tfevents.1599577440.DESKTOP-2JKO8MS.51296.0
linux/bash/: customize.md
opengl/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ninja
opengl/dependencies/: CMakeLists.txt
opengl/include/: shader.h
opengl/src/: CMakeLists.txt
opengl/src/common/: shader.cpp
opengl/src/tutorials/: CMakeLists.txt
opengl/src/tutorials/01_open_window/: CMakeLists.txt  main.cpp
opengl/src/tutorials/02_triangle_with_shaders/: README.md  main.cpp  shader.fs  shader.vs
opengl/src/tutorials/03_shader_basics/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.fs  shader.vert  shader.vs
python/openCV/: .gitignore  blur.py  color, bit, add.py  draw.py
python/openCV/feature/: corner detection.ipynb
python/openCV/processing/: colorSpace.py  edgeDetection.py  size,scale,slice.py
python/pytorch/: .gitignore  README.md  autograd.ipynb  neural_net.ipynb  nn.ipynb  tensor.ipynb  tensor_oper.ipynb
python/pytorch/tutorials/: TensorBoard.ipynb  classifier.ipynb
